--- a/ArcMap/App.xaml
+++ b/ArcMap/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ArcMap"
              Startup="Application_Startup"
-             StartupUri="MainWindow.xaml">
+             StartupUri="SplashScreen.xaml">
 	<Application.Resources>
          
 	</Application.Resources>
