--- a/ArcMap/MainWindow.xaml
+++ b/ArcMap/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:ArcMap"
         xmlns:view="clr-namespace:ArcMap.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="525" Width="790">
+        Title="Elevation Map" Height="525" Width="790" Closing="Window_Closing" WindowState="Maximized" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <local:MapViewModel x:Key="MapViewModel" />
     </Window.Resources>
