--- a/ArcMap/PopupRect.xaml
+++ b/ArcMap/PopupRect.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ArcMap"
         mc:Ignorable="d"
-        Title="PopupRect" Height="300" Width="550">
+        Title="Draw Rectangle by value" Height="375" Width="582" ResizeMode="NoResize" Topmost="True">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="Margin" Value="0,5,5,0" />
@@ -15,47 +15,28 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <Border BorderThickness="2" BorderBrush="Black" Margin="20" Background="GhostWhite" Padding="10">
+        <Border BorderThickness="2" BorderBrush="Black" Margin="10" Background="GhostWhite" Padding="10">
             <StackPanel Orientation="Vertical">
                 <TextBlock
-                    Text="Enter two points of rectangle."
+                    Text="Enter two points of rectangle." VerticalAlignment="Center" HorizontalAlignment="Center"
                     Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-                    Margin="0,0,0,0"
-                    TextWrapping="Wrap" FontWeight="SemiBold" />
+                    TextWrapping="Wrap" FontWeight="Bold" FontSize="16" />
                 <GroupBox Header="First Point">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
                         </Grid.ColumnDefinitions>
-                        <RadioButton x:Name="DDRadiobtn" Content="Decimal Degrees " IsChecked="True"
-                           Grid.Row="1" Grid.Column="0"
-                           HorizontalAlignment="Right" VerticalContentAlignment="Center" />
-                        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Width="Auto">
-                            <TextBox x:Name="DDlatTextField" Width="100"
-                             Margin="5"
-                         Tag="Decimal Degrees" />
-                            <TextBox x:Name="DDlngTextField" Width="100"
-                         Tag="Decimal Degrees" Margin="5" />
-                        </StackPanel>
-                        <RadioButton x:Name="DmsRadiobtn" Content="Degrees, Minutes, Seconds "
-                           Grid.Row="2" Grid.Column="0"
-                           HorizontalAlignment="Right" VerticalContentAlignment="Center" />
-                        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Width="Auto">
-                            <TextBox x:Name="DmsLTextField"
-                         Tag="Degrees, Minutes, Seconds" Width="100"
-                             Margin="5"/>
-                            <TextBox x:Name="DmsRTextField" Width="100"
-                         Tag="Degrees, Minutes, Seconds" Margin="5" />
-                        </StackPanel>
+                        <Label Content="Latitude and Longitude : " Grid.Row="1" Grid.Column="0"
+                           HorizontalAlignment="Right" VerticalContentAlignment="Center"/>
+                        <TextBox Grid.Row="1" Grid.Column="2" x:Name="RectLatLngTextField" Margin="10,0,0,0" MaxWidth="250" MaxHeight="25" HorizontalAlignment="Left" Width="240" Height="25" />
+                        <Label Content="Decimal Degrees: 00.0000N 000.0000E" Grid.Row="1" Grid.Column="2" Foreground="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" Margin="5,40,-5,6" Grid.RowSpan="2"/>
+                        <Label Content="Degrees Minutes Seconds: 00 00 00.0N 000 00 00.0E" Grid.Row="1" Grid.Column="2" Foreground="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" Margin="5,59,-5,7" Grid.RowSpan="3"/>
                     </Grid>
                 </GroupBox>
                 <GroupBox Header="Second Point">
@@ -64,40 +45,20 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
                         </Grid.ColumnDefinitions>
-                        <RadioButton x:Name="DDRadiobtn2" Content="Decimal Degrees " IsChecked="True"
-                           Grid.Row="1" Grid.Column="0"
-                           HorizontalAlignment="Right" VerticalContentAlignment="Center" />
-                        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Width="Auto">
-                            <TextBox x:Name="DDlatTextField2" Width="100"
-                             Margin="5"
-                         Tag="Decimal Degrees" />
-                            <TextBox x:Name="DDlngTextField2" Width="100"
-                         Tag="Decimal Degrees" Margin="5" />
-                        </StackPanel>
-                        <RadioButton x:Name="DmsRadiobtn2" Content="Degrees, Minutes, Seconds "
-                           Grid.Row="2" Grid.Column="0"
-                           HorizontalAlignment="Right" VerticalContentAlignment="Center" />
-                        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Width="Auto">
-                            <TextBox x:Name="DmsLTextField2"
-                         Tag="Degrees, Minutes, Seconds" Width="100"
-                             Margin="5"/>
-                            <TextBox x:Name="DmsRTextField2" Width="100"
-                         Tag="Degrees, Minutes, Seconds" Margin="5" />
-                        </StackPanel>
-                        <Button x:Name="DrawRectanglebtn" Content="Draw"
-                        Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
-                        Margin="0,5,0,0"
-                        Click="DrawRectanglebtn_Click" />
+                        <Label Content="Latitude and Longitude : " Grid.Row="1" Grid.Column="0"
+                           HorizontalAlignment="Right" VerticalContentAlignment="Center"/>
+                        <TextBox Grid.Row="1" Grid.Column="2" x:Name="RectLatLng2TextField" Margin="10,0,0,0" MaxWidth="250" MaxHeight="25" HorizontalAlignment="Left" Width="240" Height="25" />
+                        <Label Content="Decimal Degrees: 00.0000N 000.0000E" Grid.Row="1" Grid.Column="2" Foreground="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" Margin="5,40,-5,6" Grid.RowSpan="2"/>
+                        <Label Content="Degrees Minutes Seconds: 00 00 00.0N 000 00 00.0E" Grid.Row="1" Grid.Column="2" Foreground="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" Margin="5,59,-5,7" Grid.RowSpan="3"/>
                     </Grid>
                 </GroupBox>
+                <Button x:Name="DrawRectanglebtn" Content="Draw" Height="35"
+                        Click="DrawRectanglebtn_Click" FontWeight="Bold" />
             </StackPanel>
         </Border>
     </Grid>
